# web_craw_mango

./: home_first_page.txt  pyproject.toml  try_exception_testcode.ipynb
app/: Untitled.ipynb  Untitled1.ipynb  data집어넣기.ipynb  tutorial-serializser.ipynb  웹크롤링한 데이터 식당 데이터 생성하기 성공-desktop_version.ipynb  웹크롤링한 데이터 식당 데이터 생성하기 성공.ipynb  웹크롤링한 데이터 식당 데이터 생성하기 성공0403.ipynb  크롤링.ipynb
강릉맛집베스트30곳/: 강릉불고기.txt  동화가든.txt  라꼬시나바이이성용.txt  봉봉방앗간.txt  소문난부대찌개.txt  엄지네포장마차.txt  이모네생선찜.txt  초당할머니순두부.txt  테라로사커피공장.txt  풍년갈비.txt
경기도양평맛집베스트20곳/: 도프커피.txt  문리버.txt  수수.txt  알로하오에.txt  연핫도그.txt  옥천고읍냉면.txt  원조양평신내서울해장국.txt  카페리노.txt  테라로사.txt  하우스베이커리.txt
경희대맛집베스트30곳/: CoffeeMethodz.txt  레알라면.txt  사골마라탕.txt  솔낭구.txt  스시선생.txt  아임파이.txt  언니네함바그.txt  오관스시.txt  컴플리트커피.txt  회기왕족발보쌈.txt
망원동카페베스트20곳/: 꼬르소산도.txt  딥블루레이크커피.txt  마핑파.txt  미완성식탁.txt  비전스트롤.txt  오늘의위로.txt  카카오다다.txt  커피가게동경.txt  코코부코.txt  키오스크.txt
부산대맛집베스트10곳/: 뉴숯불통닭.txt  대길고추불고기.txt  델라고.txt  돼지집딸.txt  살롱드보네.txt  솔밭집.txt  스시심.txt  야마벤또.txt  진국명가.txt  카카오두.txt
서울대맛집베스트30곳/: 뉴욕택시디저트.txt  동경산책.txt  두만강샤브샤브.txt  로향양꼬치.txt  소풍가는날.txt  안녕베트남.txt  오지편한식당.txt  차이나당.txt  텐동요츠야.txt  퍼블리코타코.txt
성균관대맛집베스트30곳/: 건강한빵.txt  깔리.txt  독일주택.txt  명륜건강원.txt  믹스앤몰트.txt  소친친.txt  저팔계식당.txt  정돈.txt  카페키이로.txt  호호식당.txt
연세대맛집베스트35곳/: 고삼이.txt  길상양꼬치.txt  맘맘테이블.txt  벽제갈비.txt  비아메렝게.txt  소신이쏘.txt  완차이.txt  타코로코.txt  피망과토마토.txt  한림돈가.txt
와플맛집베스트25곳/: 고에이프.txt  덕수궁리에제와플.txt  딜리저트.txt  리화인와플.txt  베러댄와플.txt  오목눈이.txt  와플잇업.txt  카페호스팅.txt  패트릭스와플.txt  프레스커피.txt
이태원브런치맛집베스트15곳/: 더훈.txt  라페름.txt  루트.txt  빙봉.txt  샐러드셀러.txt  써머레인.txt  오리지널팬케이크하우스.txt  (+3 more)
(+205 files in other folders)
